# src/main/java/com/booleanuk/api/extension/controllers/DepartmentController.java
@@ -8,7 +8,7 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 
 @RestController
-@RequestMapping("/department")
+@RequestMapping("extension/departments")
 public class DepartmentController {
     private final DepartmentRepository repo;
 
